--- a/css/brain-fm.css
+++ b/css/brain-fm.css
@@ -9,15 +9,14 @@ body {
     align-items: center;
 }
 
-/*input [type='button'] { */
-
 .buttons {
     background: linear-gradient(to right, #ea9e3d 0%, #e67541 100%);
     color: white;
-    padding: 13px 25px;
+    font-size: 18px;
+    padding: 11px 30px;                         
     font-weight: bold;
     border: 0px;
-    border-radius: 45%; /*15px; */
+    border-radius: 40px;
 }
 
 a:visited {
