--- a/css/brain-fm.css
+++ b/css/brain-fm.css
@@ -1,7 +1,7 @@
 body {
     background-color: #4c14f5;
     color: white;
-    font-family: sans-serif;
+    font-family: Arial; 
 }
 
 .horizontal-flexbox {
